force-app/main/default/objects/Region__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>