force-app/main/default/objects/Region__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>