force-app/main/default/objects/Region__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>